# qbittorrent-untracked

./: README.md  pyproject.toml
qbittorrent_untracked/: main.py
tests/: test_qbittorrent_untracked.py
