[tool.poetry]
name = "qbittorrent-untracked"
version = "0.1.0"
description = ""
authors = ["Daan Wynen <black.puppydog@gmx.de>"]

[tool.poetry.dependencies]
python = "^3.10"
qbittorrent-api = "^2022.10.39"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
