[tool.poetry]
name = "qbittorrent-untracked"
version = "0.2.0"
description = "Checks files tracked by qBittorrent against actual folder content."
authors = ["Daan Wynen <black.puppydog@gmx.de>"]

[tool.poetry.scripts]
qbuntracked = 'qbittorrent_untracked.main:main'

[tool.poetry.dependencies]
python = "^3.10"
qbittorrent-api = "^2022.10.39"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
